site com bootstrap

--- a/primeiraAula/index.html
+++ b/primeiraAula/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>led zeppelin</title>
 </head>
+
 <body>
-	<div class="container"  width="560" height="315">
+	<div class="container" width="560" height="315">
 		<h2> isso aqui é um teste </h2>
 		<p> testo de mentiras
-			lorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adip
+			lorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor
+			sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet,
+			consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur
+			adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum
+			dolor sit amet, consectetur adiplorem ipsum dolor sit amet, consectetur adiplorem ipsum dolor sit amet,
+			consectetur adiplorem ipsum dolor sit amet, consectetur adip
 		</p>
-		</div>
+	</div>
 
 	<ul id="tops">
 		top 5 de tops 5:
-		<a href=http://google.com><li>5 melhores podcast de comedia</li>
-		<a href=http://google.com/><li>5 melhores maneiras de ganhar dinheiro</li>
-		<a href=http://google.com/><li>5 melhores maneiras de alcancar o sucesso</li>
-		<a href=http://google.com/><li>5 melhores maneiras de influenciar</li>
-		<a href=http://google.com/><li>5 melhores maneiras de ler livros</li>
-		<a href=pagina2.html><li>leva pra pagina nativa</li>
+		<a href=http://google.com>
+			<li>5 melhores podcast de comedia</li><a />
+			<a href=http://google.com />
+			<li>5 melhores maneiras de ganhar dinheiro</li>
+		</a>
+		<a href=http://google.com />
+		<li>5 melhores maneiras de alcancar o sucesso</li></a>
+		<a href=http://google.com />
+		<li>5 melhores maneiras de influenciar</li></a>
+		<a href=http://google.com />
+		<li>5 melhores maneiras de ler livros</li></a>
+		<a href=pagina2.html>
+			<li>video do queen</li>
+		</a>
 	</ul>
 
 
 	<div class="container">
-		<img src="queen/capa.jpg" alt="capa do quen" width="560" height="315">
+		<img src="assets/img/capa.jpg" alt="capa do quen" width="560" height="315">
 	</div>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/fJ9rUzIMcZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-
 	<body bgcolor="d3d3d3">
-</body>
+	</body>
+
 </html>
